[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator package"
authors = [
    { name = "gustada-", email = "gustada-@student.42.rio" },
    { name = "naportel", email = "naportel@student.42.rio" }
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]